# cli-snap

./: Cargo.toml  LICENSE  README.md
example/: cli-snap.toml
src/: main.rs
