[package]
name = "cli-snap"
version = "0.1.0"
edition = "2021"
authors = ["Akhil Mohan <akhilmhdh@gmail.com>"]
license = "MIT"
description = "cli-snap is a command-line interface (CLI) tool designed for testing other CLI applications using a snapshot-based testing strategy."
readme = "README.md"
homepage = "https://github.com/akhilmhdh/cli-snap"
repository = "https://github.com/akhilmhdh/cli-snap"
keywords = ["cli", "snapshot-testing"]
categories = ["command-line-utilities"]
exclude = [
    "docs/*",
    "example/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.4", features = ["derive", "string"] }
serde = "1.0.198"
serde_derive = "1.0.198"
shell-words = "1.1.0"
toml = "0.8.12"
